# sail-fox

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  fox-architecture.md
assembler/: fox.asm
assembler/examples/: block.asm  console_output.asm  jump.asm  nop.asm  set.asm
assembler/examples/eforth/: Makefile  eforth.asm.j2
assembler/examples/project-euler/: problem-01.asm
emulator/: cycle_count.c  main.c  memory.c  rts.c  sleeping.c  tracing.c  verbosity.c
emulator/include/: rts.h
include/: rts.h
model/: fetch.sail  fox.sail_project  immediates.sail  main.sail  operators.sail  predicates.sail  prelude.sail  registers.sail  state.sail  types.sail
model/instructions/: alu.sail  assembly.sail  ast.sail  begin.sail  block.sail  branch.sail  comparison.sail  encoding_word.sail  end.sail  execute.sail  logical.sail  short_immediate.sail  system.sail
model/registers/: predicates.sail  registers.sail  system.sail  targets.sail
src/: assembler.rs  lib.rs  main.rs  memory.rs  runtime.rs  sail.rs
src/memory/: mod.rs  sail_interop.rs
src/state/: mod.rs  sail_interop.rs
tests/: basic_test.rs
