[package]
name = "sail-fox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
libc = { version = "0.2.0" }
libz-sys = { version = "1.1.0", default-features = false, features = ["libc"] }
parse_int = { version = "0.6.0" }
rug = { version = "1.19.1" }

[build-dependencies]
cc = "1.0"

[dependencies.gmp-mpfr-sys]
version = "1.5"
