[package]
name = "sail-fox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]
name = "foxmulator"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
customasm = { version = "0.12.0" }
gmp-mpfr-sys = { version = "1.5" }
libc = { version = "0.2.0" }
libz-sys = { version = "1.1.0", default-features = false, features = ["libc"] }
parse_int = { version = "0.6.0" }

[build-dependencies]
cc = "1.0"
